--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,38 @@
 body {
   background-color: pink;
 }
+.board {
+  padding: 20px;
+  margin: 10px;
+  background-color: darkblue;
+  display: block;
+  text-align: center;
+}
+.row {
+  padding: 20px;
+  text-align: center;
+}
+.square {
+  padding: 10px;
+  margin: 10px;
+  background-color: white;
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  vertical-align: top;
+}
+.output {
+  text-align: center;
+  width: 300px;
+  height: 30px;
+  background-color: rgb(73, 203, 226);
+  color: black;
+  font-family: ui-serif;
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+  border: solid 2px;
+  border-color: darkslategray;
+  border-radius: 3px;
+  display: block;
+}
